--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -1,115 +1,10 @@
-﻿<Project>
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <PlatformTarget Condition=" '$(Platform)' == '' ">AnyCPU</PlatformTarget>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sharpmake.Generators</RootNamespace>
-    <AssemblyName>Sharpmake.Generators</AssemblyName>
-    <TargetFramework>net6.0</TargetFramework>
-    <FileAlignment>512</FileAlignment>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <EnableDefaultItems>false</EnableDefaultItems>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-  <PropertyGroup>
-    <Deterministic>true</Deterministic>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <MSBuildProjectExtensionsPath>..\tmp\projects\Sharpmake.Generators</MSBuildProjectExtensionsPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\tmp\bin\debug</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\debug\sharpmake.generators</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\debug\sharpmake.generators</BaseIntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsNotAsErrors>618</WarningsNotAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>1570,1591</NoWarn>
-    <LangVersion>10.0</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\tmp\bin\release</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\release\sharpmake.generators</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\release\sharpmake.generators</BaseIntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsNotAsErrors>618</WarningsNotAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>1570,1591</NoWarn>
-    <LangVersion>10.0</LangVersion>
-  </PropertyGroup>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project>
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
+
   <ItemGroup>
-    <Compile Include="Apple\XCWorkspace.Template.cs" />
-    <Compile Include="Apple\XCWorkspace.cs" />
-    <Compile Include="Apple\XCode.Util.cs" />
-    <Compile Include="Apple\XCodeProj.Template.cs" />
-    <Compile Include="Apple\XCodeProj.cs" />
-    <Compile Include="CompilerSettings.cs" />
-    <Compile Include="FastBuild\Bff.Template.cs" />
-    <Compile Include="FastBuild\Bff.Util.cs" />
-    <Compile Include="FastBuild\Bff.cs" />
-    <Compile Include="FastBuild\IBffGenerationContext.cs" />
-    <Compile Include="FastBuild\IClangPlatformBff.cs" />
-    <Compile Include="FastBuild\IMicrosoftPlatformBff.cs" />
-    <Compile Include="FastBuild\IPlatformBff.cs" />
-    <Compile Include="FastBuild\MasterBff.cs" />
-    <Compile Include="FileGenerator.cs" />
-    <Compile Include="FileGeneratorUtilities.cs" />
-    <Compile Include="GeneratorManager.cs" />
-    <Compile Include="Generic\JsonCompilationDatabase.cs" />
-    <Compile Include="Generic\MakeApplication.Template.cs" />
-    <Compile Include="Generic\MakeApplication.cs" />
-    <Compile Include="Generic\MakeProject.Template.cs" />
-    <Compile Include="Generic\MakeProject.cs" />
-    <Compile Include="Generic\Makefile.Template.cs" />
-    <Compile Include="Generic\Makefile.cs" />
-    <Compile Include="IGenerationContext.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VisualStudio\Androidproj.Template.cs" />
-    <Compile Include="VisualStudio\Androidproj.cs" />
-    <Compile Include="VisualStudio\Csproj.Template.cs" />
-    <Compile Include="VisualStudio\Csproj.cs" />
-    <Compile Include="VisualStudio\IPlatformVcxproj.cs" />
-    <Compile Include="VisualStudio\IVcxprojGenerationContext.cs" />
-    <Compile Include="VisualStudio\LaunchSettingsJson.cs" />
-    <Compile Include="VisualStudio\PackagesConfig.Template.cs" />
-    <Compile Include="VisualStudio\PackagesConfig.cs" />
-    <Compile Include="VisualStudio\ProjectJson.Template.cs" />
-    <Compile Include="VisualStudio\ProjectJson.cs" />
-    <Compile Include="VisualStudio\ProjectOptionsGenerator.cs" />
-    <Compile Include="VisualStudio\Pyproj.Template.cs" />
-    <Compile Include="VisualStudio\Pyproj.cs" />
-    <Compile Include="VisualStudio\Sln.Template.cs" />
-    <Compile Include="VisualStudio\Sln.cs" />
-    <Compile Include="VisualStudio\UserFile.cs" />
-    <Compile Include="VisualStudio\Vcxproj.Template.cs" />
-    <Compile Include="VisualStudio\Vcxproj.cs" />
-    <Compile Include="VisualStudio\VsProjCommon.Template.cs" />
-    <Compile Include="VisualStudio\VsProjCommon.cs" />
-    <Compile Include="VisualStudio\VsUtil.cs" />
-    <Compile Include="XmlFileGenerator.cs" />
+    <ProjectReference Include="..\Sharpmake\Sharpmake.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Sharpmake.Generators.sharpmake.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Sharpmake\Sharpmake.csproj">
-      <Project>{15f793c7-9e88-64a9-591c-7244fcc6b771}</Project>
-      <Name>Sharpmake</Name>
-    </ProjectReference>
-  </ItemGroup>
+
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
