--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -4,7 +4,6 @@ include:
  - template: 'Workflows/Branch-Pipelines.gitlab-ci.yml'
  
 stages:
-  - bootstrap
   - build
   - test
 
@@ -16,97 +15,45 @@ variables:
   GIT_DEPTH: 1
 
 #############
-# Stage Boostrap: compile minimal components from sharpmake then generate the full sharpmake solution and add it as artifact for next stages
-
-windows_bootstrap:
-  stage: bootstrap
-  script:
-  - pwsh Bootstrap.ps1 -configuration debug -framework net6.0 -vsVersion 2022
-  artifacts:
-    paths:
-    - "Sharpmake.sln"
-    - "tmp"
-    expire_in: 1 day
-
-mac_bootstrap:
-  stage: bootstrap
-  tags:
-  - square_mac
-  script:
-  - pwsh Bootstrap.ps1 -configuration debug -framework net6.0
-  artifacts:
-    paths:
-    - "Sharpmake.sln"
-    - "tmp"
-    expire_in: 1 day
-
-linux_bootstrap:
-  stage: bootstrap
-  tags:
-  - square-linux-k8s-compil
-  image: quay.ubisoft.com/tgruntime/tg-ubuntu-cpp:0.6.2-sharpmake
-  script:
-  - pwsh Bootstrap.ps1 -configuration debug -framework net6.0
-  artifacts:
-    paths:
-    - "Sharpmake.sln"
-    - "tmp"
-    expire_in: 1 day
-
-#############
 # Stage Build: compile sharpmake solution on all targets, keep the binaries for further steps.
 
-windows_compilation:
+.compilation:base:
   stage: build
+  variables:
+    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: "true"
+    DOTNET_NOLOGO: "true"
+    DOTNET_CLI_UI_LANGUAGE: "en"
   parallel:  
     matrix:
     - configuration: [debug, release]
   script:
-  - pwsh Compile.ps1 -slnOrPrjFile "Sharpmake.sln" -configuration $configuration -platform "Any CPU" -vsVersion 2022 -compiler "dotnet"
-  needs:
-  - windows_bootstrap
+    - dotnet build Sharpmake.sln -c $configuration -bl:Sharpmake_$configuration.binlog
   artifacts:
     untracked: true
     expire_in: 1 day
 
-mac_compilation:
-  stage: build
-  tags:
-  - square_mac
-  parallel:  
-    matrix:
-    - configuration: [debug, release]
-  script:
-  - pwsh Compile.ps1 -slnOrPrjFile "Sharpmake.sln" -configuration $configuration -platform \"Any CPU\" -compiler "dotnet"
-  needs:
-  - mac_bootstrap
-  artifacts:
-    untracked: true
-    expire_in: 1 day
+compilation:windows:
+  extends: .compilation:base
 
-linux_compilation:
-  stage: build
-  tags:
-  - square-linux-k8s-compil
+compilation:mac:
+  extends: .compilation:base
+  tags: [square_mac]
+
+compilation:linux:
+  extends: .compilation:base
+  tags: [square-linux-k8s-compil]
   image: quay.ubisoft.com/tgruntime/tg-ubuntu-cpp:0.6.2-sharpmake
-  parallel:  
-    matrix:
-    - configuration: [debug, release]
-  script:
-  - pwsh ./Compile.ps1 -slnOrPrjFile "Sharpmake.sln" -configuration $configuration -platform "Any CPU" -compiler "dotnet"
-  needs:
-  - linux_bootstrap
-  artifacts:
-    untracked: true
-    expire_in: 1 day
 
 #############
 # Unit tests
 #############
 .unit_test:base:
   stage: test
+  parallel:  
+    matrix:
+    - configuration: [debug, release]
   script:
-  - dotnet test Sharpmake.sln --configuration "${env:Optimization}"
+    - dotnet test Sharpmake.sln -c $configuration
   artifacts:
     when: on_failure
     untracked: true
@@ -115,16 +62,16 @@ linux_compilation:
 unit_test:debug:
   extends: .unit_test:base
   needs:
-  - "windows_compilation: [debug]"
+  - "compilation:windows: [debug]"
   variables:
-    Optimization: "Debug"
+    Optimization: "debug"
 
 unit_test:release:
   extends: .unit_test:base
   needs:
-  - "windows_compilation: [release]"
+    - "compilation:windows: [release]"
   variables:
-    Optimization: "Release"
+    Optimization: "release"
 
 #############
 # Regression tests
@@ -134,7 +81,7 @@ regression_test:
   script:
   - python regression_test.py
   needs:
-  - "windows_compilation: [release]"
+  - "compilation:windows: [release]"
   artifacts:
     when: on_failure
     untracked: true
@@ -148,7 +95,7 @@ functional_test:
   script:
   - python functional_test.py
   needs:
-  - "windows_compilation: [release]"
+  - "compilation:windows: [release]"
   artifacts:
     when: on_failure
     untracked: true
@@ -168,7 +115,7 @@ functional_test:
       os: [ubuntu]
       framework: [net6.0]
   needs:
-  - "linux_compilation: [release]"
+  - "compilation:linux: [release]"
   artifacts:
     when: on_failure
     untracked: true
@@ -192,7 +139,7 @@ HelloLinux:
       os: [macos-latest]
       framework: [net6.0]
   needs:
-  - "mac_compilation: [release]"
+  - "compilation:mac: [release]"
   artifacts:
     when: on_failure
     untracked: true
@@ -221,7 +168,7 @@ HelloXCode:
     variables:
       VS_VERSION_SUFFIX: "Vs2022"
   needs:
-  - "windows_compilation: [release]"
+  - "compilation:windows: [release]"
   artifacts:
     when: on_failure
     untracked: true
