--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -1,106 +1,11 @@
-﻿<Project>
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <PlatformTarget Condition=" '$(Platform)' == '' ">AnyCPU</PlatformTarget>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sharpmake</RootNamespace>
-    <AssemblyName>Sharpmake.CommonPlatforms</AssemblyName>
-    <TargetFramework>net6.0</TargetFramework>
-    <FileAlignment>512</FileAlignment>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <EnableDefaultItems>false</EnableDefaultItems>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-  <PropertyGroup>
-    <Deterministic>true</Deterministic>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <MSBuildProjectExtensionsPath>..\..\tmp\projects\Sharpmake.CommonPlatforms</MSBuildProjectExtensionsPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\tmp\bin\debug</OutputPath>
-    <IntermediateOutputPath>..\..\tmp\obj\debug\sharpmake.commonplatforms</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\..\tmp\obj\debug\sharpmake.commonplatforms</BaseIntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsNotAsErrors>618</WarningsNotAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>1570,1591</NoWarn>
-    <LangVersion>10.0</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\tmp\bin\release</OutputPath>
-    <IntermediateOutputPath>..\..\tmp\obj\release\sharpmake.commonplatforms</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\..\tmp\obj\release\sharpmake.commonplatforms</BaseIntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsNotAsErrors>618</WarningsNotAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>1570,1591</NoWarn>
-    <LangVersion>10.0</LangVersion>
-  </PropertyGroup>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project>
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
+
   <ItemGroup>
-    <Compile Include="Android\AndroidAgdePlatform.Bff.Template.cs" />
-    <Compile Include="Android\AndroidAgdePlatform.cs" />
-    <Compile Include="Android\AndroidFragments.cs" />
-    <Compile Include="Android\AndroidPlatform.Vcxproj.Template.cs" />
-    <Compile Include="Android\AndroidPlatform.cs" />
-    <Compile Include="Android\AndroidPlatformAgde.Vcxproj.Template.cs" />
-    <Compile Include="Android\GlobalSettings.cs" />
-    <Compile Include="Android\Util.cs" />
-    <Compile Include="Apple\BaseApplePlatform.Bff.Template.cs" />
-    <Compile Include="Apple\BaseApplePlatform.cs" />
-    <Compile Include="Apple\MacCatalystPlatform.Bff.Template.cs" />
-    <Compile Include="Apple\MacCatalystPlatform.cs" />
-    <Compile Include="Apple\MacOsPlatform.cs" />
-    <Compile Include="Apple\iOsPlatform.Bff.Template.cs" />
-    <Compile Include="Apple\iOsPlatform.cs" />
-    <Compile Include="Apple\tvOsPlatform.Bff.Template.cs" />
-    <Compile Include="Apple\tvOsPlatform.cs" />
-    <Compile Include="Apple\watchOSPlatform.Bff.Template.cs" />
-    <Compile Include="Apple\watchOsPlatform.cs" />
-    <Compile Include="BaseMicrosoftPlatform.Vcxproj.Template.cs" />
-    <Compile Include="BaseMicrosoftPlatform.cs" />
-    <Compile Include="BasePlatform.Vcxproj.Template.cs" />
-    <Compile Include="BasePlatform.cs" />
-    <Compile Include="DefaultPlatform.cs" />
-    <Compile Include="DotNetPlatform.cs" />
-    <Compile Include="Linux\GlobalSettings.cs" />
-    <Compile Include="Linux\LinuxOptions.cs" />
-    <Compile Include="Linux\LinuxPlatform.Bff.Template.cs" />
-    <Compile Include="Linux\LinuxPlatform.Vcxproj.Template.cs" />
-    <Compile Include="Linux\LinuxPlatform.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Windows\BaseWindowsPlatform.cs" />
-    <Compile Include="Windows\ClangForWindowsSettings.cs" />
-    <Compile Include="Windows\Win32Platform.cs" />
-    <Compile Include="Windows\Win64EnvironmentVariableResolver.cs" />
-    <Compile Include="Windows\Win64Platform.cs" />
+    <ProjectReference Include="..\..\Sharpmake.Generators\Sharpmake.Generators.csproj" />
+    <ProjectReference Include="..\..\Sharpmake\Sharpmake.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Sharpmake.CommonPlatforms.sharpmake.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Sharpmake.Generators\Sharpmake.Generators.csproj">
-      <Project>{844f66de-b015-340e-720a-8e158b517e93}</Project>
-      <Name>Sharpmake.Generators</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Sharpmake\Sharpmake.csproj">
-      <Project>{15f793c7-9e88-64a9-591c-7244fcc6b771}</Project>
-      <Name>Sharpmake</Name>
-    </ProjectReference>
-  </ItemGroup>
+
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
