--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -1,146 +1,17 @@
-﻿<Project>
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <PlatformTarget Condition=" '$(Platform)' == '' ">AnyCPU</PlatformTarget>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sharpmake</RootNamespace>
-    <AssemblyName>Sharpmake</AssemblyName>
-    <TargetFramework>net6.0</TargetFramework>
-    <FileAlignment>512</FileAlignment>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <EnableDefaultItems>false</EnableDefaultItems>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-  <PropertyGroup>
-    <Deterministic>true</Deterministic>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <RestoreAdditionalProjectSources>https://api.nuget.org/v3/index.json</RestoreAdditionalProjectSources>
-    <MSBuildProjectExtensionsPath>..\tmp\projects\Sharpmake</MSBuildProjectExtensionsPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\tmp\bin\debug</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\debug\sharpmake</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\debug\sharpmake</BaseIntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsNotAsErrors>618</WarningsNotAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>1570,1591</NoWarn>
-    <LangVersion>10.0</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\tmp\bin\release</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\release\sharpmake</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\release\sharpmake</BaseIntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsNotAsErrors>618</WarningsNotAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>1570,1591</NoWarn>
-    <LangVersion>10.0</LangVersion>
-  </PropertyGroup>
+<?xml version="1.0" encoding="utf-8"?>
+<Project>
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
+
+  <PropertyGroup>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Compile Include="Analyzer\Analyzer.cs" />
-    <Compile Include="Assembler.cs" />
-    <Compile Include="AttributeParsers.cs" />
-    <Compile Include="Attributes.cs" />
-    <Compile Include="BuildContext\BaseBuildContext.cs" />
-    <Compile Include="BuildContext\ConfigureDependencyAnalyzer.cs" />
-    <Compile Include="BuildContext\GenerateAll.cs" />
-    <Compile Include="BuildContext\RedirectOutput.cs" />
-    <Compile Include="BuildContext\RegressionTest.cs" />
-    <Compile Include="Builder.cs" />
-    <Compile Include="BuilderExtension.cs" />
-    <Compile Include="CommandLine.cs" />
-    <Compile Include="Configurable.cs" />
-    <Compile Include="ConfigureCollection.cs" />
-    <Compile Include="DebugBreaks.cs" />
-    <Compile Include="DebugProjectGenerator.cs" />
-    <Compile Include="DependencyTracker.cs" />
-    <Compile Include="DotNetDependency.cs" />
-    <Compile Include="DotNetReferenceCollection.cs" />
-    <Compile Include="EnumExtensions.cs" />
-    <Compile Include="Exception.cs" />
-    <Compile Include="ExtensionLoader.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="FakeFileTree.cs" />
-    <Compile Include="FastBuildSettings.cs" />
-    <Compile Include="FileListFilter.cs" />
-    <Compile Include="FileSystemStringComparer.cs" />
-    <Compile Include="GeneratedAssemblyConfig.cs" />
-    <Compile Include="GenerationOutput.cs" />
-    <Compile Include="GeneratorManager.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="IAssemblerContext.cs" />
-    <Compile Include="ICommandLineInterface.cs" />
-    <Compile Include="IFastBuildCompilerSettings.cs" />
-    <Compile Include="IFileGenerator.cs" />
-    <Compile Include="IPlatformDescriptor.cs" />
-    <Compile Include="IResolverHelper.cs" />
-    <Compile Include="IWindowsFastBuildCompilerSettings.cs" />
-    <Compile Include="KitsRootPaths.cs" />
-    <Compile Include="MSBuildGlobalSettings.cs" />
-    <Compile Include="Options.Agde.cs" />
-    <Compile Include="Options.Android.cs" />
-    <Compile Include="Options.AndroidMakefile.cs" />
-    <Compile Include="Options.CSharp.cs" />
-    <Compile Include="Options.Clang.cs" />
-    <Compile Include="Options.Makefile.cs" />
-    <Compile Include="Options.Vc.cs" />
-    <Compile Include="Options.XCode.cs" />
-    <Compile Include="Options.cs" />
-    <Compile Include="PackageReferences.Template.cs" />
-    <Compile Include="PackageReferences.cs" />
-    <Compile Include="PathUtil.cs" />
-    <Compile Include="PlatformAttributes.cs" />
-    <Compile Include="PlatformEventArgs.cs" />
-    <Compile Include="PlatformExceptions.cs" />
-    <Compile Include="PlatformRegistry.cs" />
-    <Compile Include="PreprocessorConditionParser.cs" />
-    <Compile Include="Project.Configuration.cs" />
-    <Compile Include="Project.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReferenceAlias.cs" />
-    <Compile Include="RegexCache.cs" />
-    <Compile Include="Resolver.cs" />
-    <Compile Include="RustProject.cs" />
-    <Compile Include="SharpmakeExtension.cs" />
-    <Compile Include="Solution.Configuration.cs" />
-    <Compile Include="Solution.cs" />
-    <Compile Include="SourceAttributeParser.cs" />
-    <Compile Include="Strings.cs" />
-    <Compile Include="Target.cs" />
-    <Compile Include="ThreadPool.cs" />
-    <Compile Include="Tools.cs" />
-    <Compile Include="TrackedConfiguration.cs" />
-    <Compile Include="TrackedProject.cs" />
-    <Compile Include="UniqueList.cs" />
-    <Compile Include="Util.cs" />
-    <Compile Include="VariableAssignment.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Sharpmake.sharpmake.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Basic.Reference.Assemblies.Net60" Version="1.3.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="3.0.4492" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="3.0.4492" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" />
+    <PackageReference Include="Basic.Reference.Assemblies.Net60" Version="1.3.0" />
   </ItemGroup>
+
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
