--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -314,14 +314,18 @@ PackageReferences:
   script:
   - pwsh RunSample.ps1 -sampleName "PackageReferences" -configuration $configuration -framework $framework -os $os
 
-# temp disabled, requires this :
-#   - name: Install Qt
-#     uses: jurplel/install-qt-action@v3.0.0
-# 
-# QTFileCustomBuild:
-#   extends: .windows_sample_test
-#   script:
-#   - pwsh RunSample.ps1 -sampleName "QTFileCustomBuild" -configuration $configuration -framework $framework -os $os
+QTFileCustomBuild:
+  extends: .windows_sample_test
+  variables:
+    Qt_BaseDir: "$CI_PROJECT_DIR\\Qt"
+    Qt5_Dir: "$Qt_BaseDir\\5.15.2\\msvc2019_64" # Needed by sample to build Qt paths.
+  before_script:
+  - choco install python3 --version 3.10.6 --side-by-side -y --no-progress
+  - py -m pip install aqtinstall
+  - py -m aqt install-qt windows desktop 5.15.2 win64_msvc2019_64 --archives qtbase qttools --outputdir ${env:Qt_BaseDir}
+  - $Env:PATH = "${env:Qt5_Dir}\bin;" + $Env:PATH # Needed by sample executable to locate Qt DLLs.
+  script:
+  - pwsh RunSample.ps1 -sampleName "QTFileCustomBuild" -configuration $configuration -framework $framework -os $os
 
 SimpleExeLibDependency:
   extends: .windows_sample_test
