--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -33,6 +33,6 @@
   
   <ItemGroup>
     <!-- Version -->
-    <PackageReference Include="MinVer" Version="4.3.0" PrivateAssets="All" />
+    <PackageReference Include="GitVersion.MsBuild" Version="5.12.0" PrivateAssets="All" />
   </ItemGroup>
 </Project>
