--- a/samples/NetCore/DotNetCoreFrameworkHelloWorld/reference/projects/helloworld/HelloWorld.vs2017.netcore3_1.csproj
+++ b/samples/NetCore/DotNetCoreFrameworkHelloWorld/reference/projects/helloworld/HelloWorld.vs2017.netcore3_1.csproj
@@ -7,10 +7,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HelloWorld</RootNamespace>
     <AssemblyName>the other name</AssemblyName>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <FileAlignment>512</FileAlignment>
-    <EnableDefaultItems>false</EnableDefaultItems>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <EnableDefaultItems>true</EnableDefaultItems>
+    <UseWpf>true</UseWpf>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -40,9 +40,6 @@
   <ItemGroup>
     <Compile Include="..\..\codebase\HelloWorld\Program.cs">
       <Link>Program.cs</Link>
-    </Compile>
-    <Compile Include="..\..\codebase\HelloWorld\Properties\AssemblyInfo.cs">
-      <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
   </ItemGroup>
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
