--- a/samples/Samples.csproj
+++ b/samples/Samples.csproj
@@ -1,13 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.Build.NoTargets/3.7.0">
+<Project>
+  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
 
   <PropertyGroup>
     <!-- While Microsoft.Build.NoTargets doesn't build anything, it still requires to have a valid TargetFramework defined -->
     <TargetFramework>net6.0</TargetFramework>
+    
+    <!-- Disable auto discovery of file to compile, and explicitly list .sharpmake.cs files only -->
+    <EnableDefaultItems>false</EnableDefaultItems>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="**/*" Exclude="Samples.csproj;obj/**" />
+    <Compile Include="**/*.sharpmake.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sharpmake\Sharpmake.csproj" />
+    <ProjectReference Include="..\Sharpmake.Platforms\Sharpmake.CommonPlatforms\Sharpmake.CommonPlatforms.csproj" />
+    <ProjectReference Include="..\Sharpmake.Generators\Sharpmake.Generators.csproj" />
+  </ItemGroup>
+
+  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
