--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,8 +29,11 @@
     <!-- Package info -->
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+
+    <!-- GitVersion -->
+    <GitVersion_NoNormalizeEnabled>true</GitVersion_NoNormalizeEnabled>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <!-- Version -->
     <PackageReference Include="GitVersion.MsBuild" Version="5.12.0" PrivateAssets="All" />
